# unsafe-alias-cell

./: Cargo.toml  README.md
src/: lib.rs
