[package]
name = "unsafe-alias-cell"
version = "0.0.0"
edition = "2021"

authors = ["y86-dev"]
license = "MIT OR Apache-2.0"
description = "Primitive for aliasing mutability"
readme = "README.md"

repository = "https://github.com/y86-dev/unsafe-alias-cell"
keywords = ["primitive", "unsafe", "aliasing", "mutability", "no-std"]
categories = ["no-std", "rust-patterns", "accessibility"]

[dependencies]
